<resources>
    <string name="app_name">my_Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="precent">%</string>
    <string name="allClear">AC</string>
    <string name="delete">del</string>
    <string name="devide">÷</string>
    <string name="multi">×</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>
